--- a/package.json
+++ b/package.json
@@ -8,21 +8,33 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk synth"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.2",
-    "@types/node": "10.17.27",
-    "@types/prettier": "2.6.0",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.4",
-    "aws-cdk": "2.52.0",
+    "@types/aws-lambda": "^8.10.109",
+    "@types/jest": "^29.2.4",
+    "@types/node": "18.11.17",
+    "@types/prettier": "2.7.2",
+    "@types/uuid": "^9.0.0",
+    "aws-cdk": "2.56.0",
+    "jest": "^29.3.1",
+    "prettier": "^2.8.1",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "~3.9.7"
+    "tsconfig-paths": "^4.1.1",
+    "typescript": "~4.9.4"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.52.0",
+    "@aws-sdk/client-s3": "^3.236.0",
+    "@aws-solutions-constructs/aws-cloudfront-s3": "^2.29.0",
+    "@aws-solutions-constructs/aws-lambda-sns": "^2.29.0",
+    "aws-cdk-lib": "2.56.0",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "uuid": "^9.0.0"
+  },
+  "volta": {
+    "node": "18.12.1",
+    "yarn": "1.22.19"
   }
 }
