--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
+    "esModuleInterop": true,
     "target": "ES2020",
     "module": "commonjs",
     "lib": [
-      "es2020"
+      "es2020",
+      "DOM"
     ],
     "declaration": true,
     "strict": true,
@@ -21,7 +23,8 @@
     "strictPropertyInitialization": false,
     "typeRoots": [
       "./node_modules/@types"
-    ]
+    ],
+    "baseUrl": "./"
   },
   "exclude": [
     "node_modules",
