--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk synth"
+    "cdk": "cdk synth",
+    "generate": "amplify codegen"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.109",
@@ -25,7 +26,9 @@
     "typescript": "~4.9.4"
   },
   "dependencies": {
+    "@aws-cdk/aws-appsync-alpha": "^2.56.0-alpha.0",
     "@aws-sdk/client-s3": "^3.236.0",
+    "@aws-sdk/s3-request-presigner": "^3.236.0",
     "@aws-solutions-constructs/aws-cloudfront-s3": "^2.29.0",
     "@aws-solutions-constructs/aws-lambda-sns": "^2.29.0",
     "aws-cdk-lib": "2.56.0",
